base/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-api
  namespace: task-management
  labels:
    app: task-api
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: task-api
